Making progress on team stats page

--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -474,6 +474,9 @@
     <Compile Include="WindowsLeague\StatsUX.xaml.cs">
       <DependentUpon>StatsUX.xaml</DependentUpon>
     </Compile>
+    <Compile Include="WindowsLeague\TeamStatsUX.xaml.cs">
+      <DependentUpon>TeamStatsUX.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WindowsLeague\Team_DetailUX.xaml.cs">
       <DependentUpon>Team_DetailUX.xaml</DependentUpon>
     </Compile>
@@ -607,6 +610,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="WindowsLeague\StatsUX.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="WindowsLeague\TeamStatsUX.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
