Finished the team stats window

--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -194,6 +194,9 @@
     <Compile Include="Help_Forms\Help_TeamDetail.xaml.cs">
       <DependentUpon>Help_TeamDetail.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Help_Forms\Help_TeamStats.xaml.cs">
+      <DependentUpon>Help_TeamStats.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Help_Forms\Help_TrainingCamp.xaml.cs">
       <DependentUpon>Help_TrainingCamp.xaml</DependentUpon>
     </Compile>
@@ -503,6 +506,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Help_Forms\Help_TeamDetail.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Help_Forms\Help_TeamStats.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
