Started working on the league injuries window

--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -309,6 +309,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>LeagueEDM.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\League_Injuries.cs" />
     <Compile Include="Models\League_Structure_by_Season.cs">
       <DependentUpon>LeagueEDM.tt</DependentUpon>
     </Compile>
