--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -762,8 +762,8 @@
     <Resource Include="Images\Helmets\st_Turbos.png" />
     <Resource Include="Images\Stadiums\st_Detroit.jpg" />
     <Resource Include="Images\Game_Intro_Background.jpg" />
-    <Resource Include="Images\Stadiums\GenericGrass2.png" />
     <Resource Include="Images\Stadiums\Field__Template.png" />
+    <Resource Include="Images\Stadiums\Grass_BrightGreen.png" />
     <Content Include="Models\LeagueEDM.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>LeagueEDM.edmx</DependentUpon>
