--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Draft\Draft_Pos_Importance.cs" />
     <Compile Include="Enum\Ball_States.cs" />
     <Compile Include="Enum\Formations_Enum.cs" />
+    <Compile Include="Enum\Graphics_Player_States.cs" />
     <Compile Include="Enum\Player_States.cs" />
     <Compile Include="Enum\Play_Enum.cs" />
     <Compile Include="Enum\Stat_Type.cs" />
@@ -740,6 +741,46 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>LeagueEDM.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="Images\Source\Players\L_FG_KICK.xcf" />
+    <None Include="Images\Source\Players\L_Kick_About_to_Catch.xcf" />
+    <None Include="Images\Source\Players\L_On_Back.xcf" />
+    <None Include="Images\Source\Players\L_Run1_Down_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run1_Down_With_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run1_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run1_Up_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run1_Up_With_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run1_With_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run2_Down_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run2_Down_With_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run2_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run2_Up_No_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run2_Up_With_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Run2_With_Ball.xcf" />
+    <None Include="Images\Source\Players\L_Stand_Player.xcf" />
+    <None Include="Images\Source\Players\L_Tackled.xcf" />
+    <None Include="Images\Source\Players\L_Upright_Block1.xcf" />
+    <None Include="Images\Source\Players\L_Upright_Block2.xcf" />
+    <None Include="Images\Source\Players\R_FG_KICK.xcf" />
+    <None Include="Images\Source\Players\R_Kick_About_to_Catch.xcf" />
+    <None Include="Images\Source\Players\R_On_Back.xcf" />
+    <None Include="Images\Source\Players\R_Run1_Down_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run1_Down_With_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run1_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run1_Up_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run1_Up_With_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run1_With_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run2_Down_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run2_Down_With_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run2_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run2_Up_No_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run2_Up_With_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Run2_With_Ball.xcf" />
+    <None Include="Images\Source\Players\R_Stand_Player.xcf" />
+    <None Include="Images\Source\Players\R_Tackled.xcf" />
+    <None Include="Images\Source\Players\R_Upright_Block.xcf" />
+    <None Include="Images\Source\Players\R_Upright_Block1.xcf" />
+    <None Include="Images\Source\Players\R_Upright_Block2.xcf" />
+    <None Include="Images\Source\Players\sprite_sheet.xcf" />
     <None Include="Models\LeagueEDM.edmx.diagram">
       <DependentUpon>LeagueEDM.edmx</DependentUpon>
     </None>
@@ -765,10 +806,8 @@
     <Resource Include="Images\Game_Intro_Background.jpg" />
     <Resource Include="Images\Stadiums\Field__Template.png" />
     <Resource Include="Images\Stadiums\Grass_BrightGreen.png" />
-    <Resource Include="Images\Players\A_Standing_Player.png" />
-    <Resource Include="Images\Players\H_Standing_Player.png" />
-    <Resource Include="Images\Players\A_Stand_Player.png" />
-    <Resource Include="Images\Players\H_Stand_Player.png" />
+    <Resource Include="Images\Players\L_Stand_Player.png" />
+    <Resource Include="Images\Players\R_Stand_Player.png" />
     <Content Include="Models\LeagueEDM.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>LeagueEDM.edmx</DependentUpon>
