Working on method to take player state and set sprite state

--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Enum\Ball_States.cs" />
     <Compile Include="Enum\Formations_Enum.cs" />
     <Compile Include="Enum\Graphics_Player_States.cs" />
+    <Compile Include="Enum\Player_Graphic_Sprite.cs" />
     <Compile Include="Enum\Player_States.cs" />
     <Compile Include="Enum\Play_Enum.cs" />
     <Compile Include="Enum\Stat_Type.cs" />
@@ -195,7 +196,7 @@
     <Compile Include="Game\Game_Ball.cs" />
     <Compile Include="Game\Game_Helper.cs" />
     <Compile Include="Game\Game_Player.cs" />
-    <Compile Include="Game\Graphics_Object_Properties.cs" />
+    <Compile Include="Game\Player_Graphics1_Rec.cs" />
     <Compile Include="Game\Play_Struct.cs" />
     <Compile Include="Game\Play_Package.cs" />
     <Compile Include="Help_Forms\Help_Champions.xaml.cs">
