Working on revamping how the players are stored before shown

--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -191,16 +191,20 @@
     <Compile Include="Enum\Play_Enum.cs" />
     <Compile Include="Enum\Stat_Type.cs" />
     <Compile Include="Free_Agency\FreeAgency_Helper.cs" />
+    <Compile Include="Game\Action.cs" />
     <Compile Include="Game\Coach.cs" />
     <Compile Include="Game\Formation.cs" />
     <Compile Include="Game\Formation_Rec.cs" />
     <Compile Include="Game\GameEngine.cs" />
     <Compile Include="Free_Agency\Pos_and_Count.cs" />
     <Compile Include="Game\Game_Ball.cs" />
-    <Compile Include="Game\Game_Helper.cs" />
     <Compile Include="Game\Game_Player.cs" />
+    <Compile Include="Game\Graphics_Game_Ball.cs" />
+    <Compile Include="Game\Game_Helper.cs" />
+    <Compile Include="Game\Graphics_Game_Player.cs" />
     <Compile Include="Game\Player_Graphics1_Rec.cs" />
     <Compile Include="Game\Play_Result.cs" />
+    <Compile Include="Game\Play_Stage.cs" />
     <Compile Include="Game\Play_Struct.cs" />
     <Compile Include="Game\Play_Package.cs" />
     <Compile Include="Help_Forms\Help_Champions.xaml.cs">
