Added helmet to middle of league

--- a/SpectatorFootball/SpectatorFootball.csproj
+++ b/SpectatorFootball/SpectatorFootball.csproj
@@ -760,6 +760,7 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>SettingsEDM.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <None Include="Images\Source\Field_Templates\Field_Template.xcf" />
     <None Include="Images\Source\Field_Templates\Template.xcf" />
     <None Include="Images\Source\misc\Goalposts.xcf" />
     <None Include="Images\Source\Players\L_FG_KICK.xcf" />
